Added the VeganRecipe.sln file. This file keeps track of the entire solution.
I removed all of the bin and obj items from the repository. You do not need to version these as they are generated from your code. They just make things messy and hard to manage.

I added the unit test project, and I already referenced the VeganRecipe project so you can access it for testing purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+biin
+obj
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -210,3 +212,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/VeganRecipe/obj
+/VeganRecipe/bin
